theme dark mode bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -80,10 +80,10 @@
 }
 
 html,
-/*body {*/
-/*  max-width: 100vw;*/
-/*  overflow-x: hidden;*/
-/*}*/
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
 
 body {
   color: rgb(var(--foreground-rgb));
@@ -105,3 +105,6 @@ a {
     color-scheme: dark;
   }
 }
+
+
+
